# rust-firebase-crud

./: Cargo.toml  README.md
src/: main.rs
